initialSetup/main/default/objects/Account/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(
    OR(
        MONTH(TODAY()) &lt; MONTH(DOB__c),
        AND(
            MONTH(TODAY()) = MONTH(DOB__c),
            DAY(TODAY()) &lt; DAY(DOB__c)
        )
    ),
    YEAR(TODAY()) - YEAR(DOB__c) - 1,
    YEAR(TODAY()) - YEAR(DOB__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>