initialSetup/main/default/objects/Account/fields/Agreement_to_Remain_Abstinent__c.field-meta.xml
<CustomField>
    <fullName>Agreement_to_Remain_Abstinent__c</fullName>
    <label>Agreement to Remain Abstinent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>