initialSetup/main/default/objects/Account/fields/Alcohol_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Consumption__c</fullName>
    <label>Alcohol Consumption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Occasionally</fullName>
            </value>
            <value>
                <fullName>Regularly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>