initialSetup/main/default/objects/Account/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <formula>IF(
    AND(NOT(ISBLANK(Weight__c)), NOT(ISBLANK(Height__c)), Height__c &gt; 0),
    Weight__c / ((Height__c / 100) ^ 2),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BMI (Body Mass Index)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>