initialSetup/main/default/objects/Account/fields/Board_Certified__c.field-meta.xml
<CustomField>
    <fullName>Board_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if doctor is board-certified. Important for compliance.</description>
    <label>Board Certified</label>
    <type>Checkbox</type>
</CustomField>