initialSetup/main/default/objects/Account/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <label>Diagnosis</label>
    <type>TextArea</type>
</CustomField>