initialSetup/main/default/objects/Account/fields/Dietary_Habits__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Habits__c</fullName>
    <label>Dietary Habits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Non-veg</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>