initialSetup/main/default/objects/Account/fields/Disability_Status__c.field-meta.xml
<CustomField>
    <fullName>Disability_Status__c</fullName>
    <label>Disability Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Mental</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>