initialSetup/main/default/objects/Account/fields/Duration_of_Macular_Edema__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Macular_Edema__c</fullName>
    <label>Duration of Macular Edema</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>