initialSetup/main/default/objects/Account/fields/ECG_Status__c.field-meta.xml
<CustomField>
    <fullName>ECG_Status__c</fullName>
    <label>ECG Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Abnormal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>