initialSetup/main/default/objects/Account/fields/Emergency_Contact_Relation__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relation__c</fullName>
    <label>Emergency Contact Relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>