initialSetup/main/default/objects/Account/fields/Exercise_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Frequency__c</fullName>
    <label>Exercise Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-2 times/week</fullName>
            </value>
            <value>
                <fullName>3+ times/week</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>