initialSetup/main/default/objects/Account/fields/Family_Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Family_Medical_History__c</fullName>
    <label>Family Medical History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>