initialSetup/main/default/objects/Account/fields/Hospital_Preference__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Preference__c</fullName>
    <label>Hospital Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>