initialSetup/main/default/objects/Account/fields/Infectious_Disease_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Infectious_Disease_Exposure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infectious Disease Exposure</label>
    <type>Checkbox</type>
</CustomField>