initialSetup/main/default/objects/Account/fields/Laser_eye_treatment_history__c.field-meta.xml
<CustomField>
    <fullName>Laser_eye_treatment_history__c</fullName>
    <label>Laser eye treatment history</label>
    <length>255</length>
    <type>Text</type>
</CustomField>