initialSetup/main/default/objects/Account/fields/Masked_Name__c.field-meta.xml
<CustomField>
    <fullName>Masked_Name__c</fullName>
    <label>Masked Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>