initialSetup/main/default/objects/Account/fields/Medical_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Medical_Specialty__c</fullName>
    <label>Medical Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>