initialSetup/main/default/objects/Account/fields/MFSAF_Symptom_1_Score__c.field-meta.xml
<CustomField>
    <fullName>MFSAF_Symptom_1_Score__c</fullName>
    <label>MFSAF Symptom 1 Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>