initialSetup/main/default/objects/Account/fields/MFSAF_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>MFSAF_Total_Score__c</fullName>
    <label>MFSAF Total Score (7-day average)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>