initialSetup/main/default/objects/Account/fields/Past_Surgeries__c.field-meta.xml
<CustomField>
    <fullName>Past_Surgeries__c</fullName>
    <label>Past Surgeries</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>