initialSetup/main/default/objects/Account/fields/Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>Patient_Id__c</fullName>
    <displayFormat>PAT-{000000}</displayFormat>
    <label>Patient ID</label>
    <type>AutoNumber</type>
</CustomField>