initialSetup/main/default/objects/Account/fields/Patient_Notes__c.field-meta.xml
<CustomField>
    <fullName>Patient_Notes__c</fullName>
    <label>Patient Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>