initialSetup/main/default/objects/Account/fields/Physician_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Physician_Contact_Info__c</fullName>
    <label>Physician Contact Info</label>
    <type>Phone</type>
</CustomField>