initialSetup/main/default/objects/Account/fields/PI_Availability__c.field-meta.xml
<CustomField>
    <fullName>PI_Availability__c</fullName>
    <label>PI Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-time</fullName>
            </value>
            <value>
                <fullName>Part-time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>