initialSetup/main/default/objects/Account/fields/PI_Experience_Years__c.field-meta.xml
<CustomField>
    <fullName>PI_Experience_Years__c</fullName>
    <label>PI Experience (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>