initialSetup/main/default/objects/Account/fields/Pregnancy__c.field-meta.xml
<CustomField>
    <fullName>Pregnancy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pregnancy</label>
    <type>Checkbox</type>
</CustomField>