initialSetup/main/default/objects/Account/fields/Primary_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Primary_Diagnosis__c</fullName>
    <label>Primary Diagnosis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>