initialSetup/main/default/objects/Account/fields/Primary_Physician__c.field-meta.xml
<CustomField>
    <fullName>Primary_Physician__c</fullName>
    <label>Primary Physician</label>
    <length>255</length>
    <type>Text</type>
</CustomField>