initialSetup/main/default/objects/Account/fields/Recent_Lab_Tests__c.field-meta.xml
<CustomField>
    <fullName>Recent_Lab_Tests__c</fullName>
    <label>Recent Lab Tests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>