initialSetup/main/default/objects/Account/fields/Respiratory_Rate__c.field-meta.xml
<CustomField>
    <fullName>Respiratory_Rate__c</fullName>
    <label>Respiratory Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>