initialSetup/main/default/objects/Account/fields/Spleen_Volume__c.field-meta.xml
<CustomField>
    <fullName>Spleen_Volume__c</fullName>
    <label>Spleen Volume (cm3)</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>