initialSetup/main/default/objects/Account/fields/Sugar_Status__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Status__c</fullName>
    <label>Sugar Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>