initialSetup/main/default/objects/Account/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Temperature (°C)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>