initialSetup/main/default/objects/Account/fields/Travel_History__c.field-meta.xml
<CustomField>
    <fullName>Travel_History__c</fullName>
    <label>Travel History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>