initialSetup/main/default/objects/Account/fields/Trial_Site__c.field-meta.xml
<CustomField>
    <fullName>Trial_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trial Site</label>
    <referenceTo>HealthcareFacility</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>