initialSetup/main/default/objects/Account/fields/Vaccination_History__c.field-meta.xml
<CustomField>
    <fullName>Vaccination_History__c</fullName>
    <label>Vaccination History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>