initialSetup/main/default/objects/Account/recordTypes/CRO.recordType-meta.xml
<RecordType>
    <fullName>CRO</fullName>
    <active>true</active>
    <label>CRO</label>
</RecordType>