initialSetup/main/default/objects/Account/recordTypes/Group.recordType-meta.xml
<RecordType>
    <fullName>Group</fullName>
    <active>true</active>
    <label>Group</label>
</RecordType>