initialSetup/main/default/objects/Account/recordTypes/Sponsor.recordType-meta.xml
<RecordType>
    <fullName>Sponsor</fullName>
    <active>true</active>
    <label>Sponsor</label>
</RecordType>